--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "miniprogramRoot": "dist/",
+  "miniprogramRoot": "dist/weapp/",
   "projectname": "myApp",
   "description": "a",
   "appid": "wxe179a199cb74d242",
